--- a/site/nginx/files/index.html
+++ b/site/nginx/files/index.html
@@ -4,5 +4,6 @@
   </head>
   <body>
     <h1>Hello World, Puppet is Fun!</h1>
+    <h1>But this isn't exactly fundamental.  Reading is fundamental!</h1>
   </body>
 </html>
