Added one line to the index.html for the nginx stuff.

--- a/site/nginx/files/index.html
+++ b/site/nginx/files/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1>Hello World, Puppet is Fun!</h1>
     <h1>But this isn't exactly fundamental.  Reading is fundamental!</h1>
+    <h1>This change was made on yavin, synced to github, then back to the classroom!</h1>
   </body>
 </html>
